src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgb(26, 24, 24);
  /* Header space */
  /* padding-top: 92px; */
  /* background-color: #111111; */
 
}

/* disable blue highlight (especially on mobile) */
input,
textarea,
button,
select,
div,
a {
  outline: none;
}

.headerRoom {
  margin-top: 92px;
}

.clearFooterPadding {
  /* padding-bottom: 100px; */
}

.clearFooterPaddingDesktopSongs {
  /* padding-bottom: 140px; */
  padding-bottom: 60px;
}

.clearFooterPaddingMobile {
  padding-bottom: 70px;
}

input[type=checkbox] {
  padding-top: 20px;
  transform: scale(1.2);
}

#metronomeSoundCheckbox {
  margin-left: 5.6px;
}

div {
  color: rgb(255, 255, 255);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

a {
  display: inherit;
  text-decoration: none;
}

svg {
  fill: white;
  color: white;
  transition: all 0.05s ease-out;
  /* height: 30px;
  width: 30px; */
}

svg:hover {
  fill: rgb(117, 117, 117);
  transition: all 0.10s ease-in;
  cursor: pointer;
}

@media (hover: none) {
  svg:hover { fill: white; };
}

.removeSongCross {
  margin-right: 8px;
}

.removeSongCrossMobile {
  margin-right: 4px;
}

.collectionsTitle {
  margin-bottom: 40px;
}

.BPMTextAndCheckbox {
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: row;
}

.burgerName {
  margin-top: 0px;
  font-size: 130%;
  /* font-size: 2.2vmin; */
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  max-width: 100%;
  margin-bottom: 18px;
}

.burgerLogout {
  cursor: pointer;
}

.burgerCross {
  color: white;
}

.tempoPlayArrow {
  margin-bottom: 30px;
}

.browseSongsTitle {
  margin-bottom: 30px;
}

.collections {
  display: grid;
  grid-template-columns: repeat(auto-fill,max(178px, 25%));
  justify-content: center;
}

@media only screen and (min-width: 534px) {
  .collections {
    padding-left: 10px;
    padding-right: 10px;
  }
}

.singleCollection {
  margin:auto;
  display: flex;
  cursor: pointer;
  flex-direction: column;
  width: 13vw;
  height: 13vw;
  min-width: 125px;
  min-height: 125px;
  max-width: 250px;
  max-height: 250px;
  /* margin-right: 6vw;
  margin-left: 6vw; */
  /* margin-bottom: 80px; */
  margin-bottom: max(80px, min(10vw, 180px));
}

.imgAndStatus {
  position: relative;
}

.collectionName {
  font-size: 20px;
  font-weight: 500;
  padding-top: 4px;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.sessionStatus {
  /* font-size: min(max(0.85vw, 12px), 17px); */
  font-size: min(max(0.977vw, 13.55px), 18px);
  /* position: absolute;
  padding-left: 4px;
  top: 86.8%;
  background-color: rgba(128, 128, 128, 0.479);
  border-radius: 0px 0px 0px 1.15vw; */
}

.collectionImage {
  border-radius: 1.15vw;
  width: 13vw;
  height: 13vw;
  min-width: 125px;
  min-height: 125px;
  max-width: 250px;
  max-height: 250px;
}

.singleCollectionInnerContainer {
  display: flex;
  flex-direction: column;
}

#mainPlayerContainer {
  margin-top: 20px;
  margin-left: 4vw;
  margin-right: 4vw;
}

.playerWrapper {
  margin-top: 102px;
}

#mainPlayer {
  display: flex;
  flex-direction: column;
  align-items: center;
  /* margin-left: 8vw;
  margin-right: 8vw; */
  margin-left: auto;
  margin-right: auto;
  border: 1px rgb(114, 114, 114) solid;
  border-radius: 7px 7px 7px 7px;
  max-width: 940px;
  box-shadow: 0px 0px 64px 10px white;
}

#mainPlayerImageContainer {
  width: 100%;
  display: flex;
  justify-content: center;
  position: relative;
}

.imagePlayerFiller {
  position: absolute;
  width: 100%;
  height: 100%;
}

#mainPlayerImg {
  width: 95%;
  height: auto;
  z-index: 1;
}

.loopMarginTop {
  margin-top: 8px;
}

.singleMainPlayerTimestamp {
  width: 40px;
} 

#innerMainPlayerContainer {
  padding-top: min(4vw, 28px);
}

#innerMainPlayer {
  /* border: 2px white solid; */
  margin-left: 4vw;
  margin-right: 4vw;
}

.mainPlayerPlayPausePadding {
  margin-left: 20px;
  margin-right: 20px;
}

#mainPlayerSongInfo {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.mainPlayerflexHorizontal {
  display: flex;
  flex-direction: row;
}

.mainPlayerFlexCenter {
  display: flex;
  justify-content: center;
}

.mainPlayerFlexCenterVertical {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;
  margin-bottom: 20px;
}

.collectionSongsList {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.collectionSongsFlexCenterVertical {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

.mainPlayerFlexVertical {
  display: flex;
  flex-direction: column;
}

#metronomeNavButton {
  height: 30px;
  width: 30px;
  padding-top: 6px;
  padding-right: 5px;
  pointer-events: all;
}

#metronomeMain {
  height: 80px;
  width: 80px;
  margin-top: 22px;
  transition: all 0.10s ease-out;
  margin-bottom: 14px;
}

.bars2 {
  margin-left: auto;
  margin-right: auto;
  width:40.255px;
  height:34.92px;
  --c:linear-gradient(currentColor 0 0);
  background: 
    var(--c) 0%   100%,
    var(--c) 50%  100%,
    var(--c) 100% 100%;
  background-size:9px 100%;
  background-repeat: no-repeat;
  animation:b2 1s infinite linear;
}
@keyframes b2 {
    20% {background-size:9px 60% ,9px 100%,9px 100%}
    40% {background-size:9px 80% ,9px 60% ,9px 100%}
    60% {background-size:9px 100%,9px 80% ,9px 60% }
    80% {background-size:9px 100%,9px 100%,9px 80% }
}

.screenTitle {
  /* color: rgb(255, 255, 255); */
  font-size: 2em;
  text-align: center;
}

.browseSongsAlert {
  /* color: rgb(255, 255, 255); */
  font-size: 1.3em;
  text-align: center;
  padding-left: 30px;
  padding-right: 30px;
}

.browseSongsInput {
  width: 200px;
  margin-bottom: 20px;
}
/* ... */

